# tracedb

./: .coderabbit.yaml  .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  fly.toml  railway.toml
.circleci/: config.yml
.github/workflows/: ci.yml  deploy-aws.yml  deploy-railway.yml  post-deploy-smoke.yml  release-container.yml
apps/bench/: README.md
apps/engine/: README.md
apps/gateway/: README.md
apps/worker/: README.md
benchmarks/realworld/: .env.local.example  README.md  REMOTE_OFFLOAD.md  docker-compose.yml  modal_bench.py  railway_bench.py  requirements.txt
benchmarks/realworld/runner/: __init__.py  chat_demo.py  cli.py  datasets.py  experiment.py  http.py  mathutil.py  metrics.py  openrouter.py  report.py  scaling.py  suite.py  suite_spec.py  types.py
benchmarks/realworld/scripts/: make_offload_bundle.sh  run_railway_target.sh  run_remote_suite.sh
benchmarks/realworld/suites/: manual_1m.json  platform_pr.json  platform_push_10k.json  production_1m.json  railway_stateful.json  release_100k.json  soak_railway.json
benchmarks/realworld/tests/: test_adapter_hardening.py  test_chat_demo.py  test_durability_docs.py  test_local_rust_launch_doctor.py  test_modal_bench.py  test_modal_product_verify.py  test_openrouter_scientific_runner.py  test_platform_conformance.py  test_product_framing_docs.py  test_railway_bench.py  test_scaling.py  test_schema_validation_docs.py  test_suite_gate.py  test_suite_reporting.py
benchmarks/realworld/workloads/: search_rag_6.json
clients/python/: README.md  http_smoke.py  install_smoke.py  pyproject.toml
clients/python/tests/: test_client.py
clients/python/tracedb/: __init__.py  client.py
clients/typescript/: README.md  build-package-smoke.ts  gateway-smoke.ts  http-smoke.ts  package-entry-smoke.ts  package-lock.json  package.json  public-http-smoke.ts  public-sdk-smoke.ts  quickstart.ts  smoke.ts  tsconfig.build.json  tsconfig.json  tsconfig.smoke.json
clients/typescript/scripts/: packed-consumer-smoke.mjs  rewrite-declaration-imports.mjs
clients/typescript/src/: client.ts  index.ts  sdk.ts
crates/tracedb-bench/: Cargo.toml
crates/tracedb-bench/src/: lib.rs  main.rs
crates/tracedb-cache/: Cargo.toml
crates/tracedb-cache/src/: lib.rs
crates/tracedb-catalog/: Cargo.toml
crates/tracedb-catalog/src/: lib.rs
crates/tracedb-cli/: Cargo.toml
crates/tracedb-cli/src/: main.rs
crates/tracedb-cli/tests/: demo.rs
crates/tracedb-core/: Cargo.toml  README.md
crates/tracedb-core/src/: lib.rs
crates/tracedb-features/: Cargo.toml
crates/tracedb-features/src/: lib.rs
crates/tracedb-gateway/: Cargo.toml  README.md
crates/tracedb-gateway/src/: lib.rs
crates/tracedb-graph/: Cargo.toml
crates/tracedb-graph/src/: lib.rs
crates/tracedb-index/: Cargo.toml
crates/tracedb-index/src/: lib.rs
crates/tracedb-jobs/: Cargo.toml
crates/tracedb-jobs/src/: lib.rs
crates/tracedb-keeper/: Cargo.toml
crates/tracedb-keeper/src/: lib.rs
crates/tracedb-kernel/: Cargo.toml
crates/tracedb-kernel/src/: lib.rs
crates/tracedb-log/: Cargo.toml
crates/tracedb-log/src/: lib.rs
crates/tracedb-memory-runtime/: Cargo.toml
crates/tracedb-memory-runtime/src/: lib.rs
crates/tracedb-metering/: Cargo.toml
crates/tracedb-metering/src/: lib.rs
crates/tracedb-module/: Cargo.toml
crates/tracedb-module/src/: lib.rs
crates/tracedb-modules/: Cargo.toml
crates/tracedb-modules/src/: lib.rs
crates/tracedb-planner/: Cargo.toml
crates/tracedb-planner/src/: lib.rs
crates/tracedb-policy/: Cargo.toml
crates/tracedb-policy/src/: lib.rs
crates/tracedb-provenance/: Cargo.toml
crates/tracedb-provenance/src/: lib.rs
crates/tracedb-query/: Cargo.toml  README.md
crates/tracedb-query/src/: lib.rs
crates/tracedb-remote-storage/: Cargo.toml
crates/tracedb-remote-storage/src/: lib.rs
crates/tracedb-retrieval-core/: Cargo.toml
crates/tracedb-retrieval-core/src/: lib.rs
crates/tracedb-schema/: Cargo.toml
crates/tracedb-schema/src/: lib.rs
crates/tracedb-segment/: Cargo.toml
crates/tracedb-segment-server/: Cargo.toml
crates/tracedb-segment-server/src/: lib.rs
crates/tracedb-server/: Cargo.toml  README.md
crates/tracedb-server/src/: lib.rs  main.rs
crates/tracedb-std/: Cargo.toml
crates/tracedb-store/: Cargo.toml
crates/tracedb-temporal/: Cargo.toml
crates/tracedb-testkit/: Cargo.toml
crates/tracedb-testkit/tests/: acceptance.rs  architecture_acceptance.rs  realworld_benchmark_acceptance.rs  usability_acceptance.rs
crates/tracedb-text/: Cargo.toml
crates/tracedb-vector/: Cargo.toml
crates/tracedb-worker/: Cargo.toml
crates/tracedb-worker/src/: lib.rs  main.rs
deploy/aws/: Caddyfile  README.md  cloud-storage-baseline.yaml  docker-compose.yml  env.engine.example  env.gateway.example  env.worker.example
deploy/hybrid/: README.md
deploy/local/: catalog-init.sql
deploy/railway/: README.md  env.benchmark.example  env.engine.example  env.example  env.gateway.example  env.worker.example  railway.bench.toml  railway.engine.toml  railway.worker.toml
docs/: README.md  TraceDB.md  cloud-storage-v0.1.1.md  durability-semantics-v0.md  getting-started.md  peer_review.md  platform-contract-v0.md  project-intent.md
docs/Operations/: Local Cloud.md  backup-restore-runbook.md  deployment-runbooks.md  hosted-alpha-security.md  observability-minimums.md  railway-lab.md
docs/api/: v1-http.md  v1-openapi.json
docs/architecture/: candidate-streams.md  kernel-and-modules.md  top-down.md
docs/benchmarks/: kpi-closeout.md
docs/decisions/: docker-over-railpack.md
docs/gemini-report/: README.md  compliance_pov.md  developer_pov.md  gtm_pov.md  infrastructure_pov.md  investor_pov.md  valuation_timeline.md
docs/handoffs/: codex-cli.md  multi-agent-patch-pass-2026-05-30.md  prod-storage-index-jobs.md
docs/product/: thesis.md
scripts/: generate_openapi_v1.py  generate_typescript_client.py  local_rust_launch_doctor.py  modal_product_verify.py  platform_conformance.py  validate_protocol_locks.py
(+18 files in other folders)
