[workspace]
members = [
    "crates/tracedb-core",
    "crates/tracedb-kernel",
    "crates/tracedb-module",
    "crates/tracedb-std",
    "crates/tracedb-schema",
    "crates/tracedb-log",
    "crates/tracedb-store",
    "crates/tracedb-segment",
    "crates/tracedb-index",
    "crates/tracedb-modules",
    "crates/tracedb-text",
    "crates/tracedb-vector",
    "crates/tracedb-graph",
    "crates/tracedb-temporal",
    "crates/tracedb-policy",
    "crates/tracedb-provenance",
    "crates/tracedb-features",
    "crates/tracedb-retrieval-core",
    "crates/tracedb-memory-runtime",
    "crates/tracedb-planner",
    "crates/tracedb-query",
    "crates/tracedb-jobs",
    "crates/tracedb-worker",
    "crates/tracedb-catalog",
    "crates/tracedb-gateway",
    "crates/tracedb-keeper",
    "crates/tracedb-segment-server",
    "crates/tracedb-cache",
    "crates/tracedb-metering",
    "crates/tracedb-server",
    "crates/tracedb-cli",
    "crates/tracedb-bench",
    "crates/tracedb-testkit",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "FSL-1.1-ALv2"
version = "0.1.0"

[workspace.dependencies]
axum = "0.8"
async-graphql = "7.0"
base64 = "0.22"
bcrypt = "0.15"
bincode = "1.3"
chacha20poly1305 = { version = "0.10", features = ["std"] }
crc32fast = "1.4"
fs2 = "0.4"
hmac = "0.12"
nom = "7.1"
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tempfile = "3.10"
thiserror = "1.0"
tokio = { version = "1.48", features = ["macros", "net", "rt-multi-thread", "signal", "time"] }
tower = { version = "0.5", features = ["limit", "load-shed", "timeout", "util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
