[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tracedb"
version = "0.1.0"
description = "Sync-first TraceDB Python SDK"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = []

[tool.setuptools]
packages = ["tracedb"]
