[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tracedb"
version = "0.1.0"
description = "Sync-first TraceDB Python SDK with async helpers"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = []
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
]
keywords = ["tracedb", "database", "sdk"]

[project.optional-dependencies]
async = [
    "aiohttp>=3.8",
]

[project.urls]
Homepage = "https://github.com/tracedb/tracedb"
Repository = "https://github.com/tracedb/tracedb"

[tool.setuptools]
packages = ["tracedb"]
