[package]
name = "tracedb-bench"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
serde_json.workspace = true
serde.workspace = true
tempfile.workspace = true
tracedb-query = { path = "../tracedb-query" }

[[bin]]
name = "tracedb-bench"
path = "src/main.rs"
