[package]
name = "tracedb-cli"
edition.workspace = true
license.workspace = true
version.workspace = true

[[bin]]
name = "tracedb"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tracedb-bench = { path = "../tracedb-bench" }
tracedb-catalog = { path = "../tracedb-catalog" }
tracedb-core = { path = "../tracedb-core" }
tracedb-index = { path = "../tracedb-index" }
tracedb-jobs = { path = "../tracedb-jobs" }
tracedb-query = { path = "../tracedb-query" }
tracedb-segment = { path = "../tracedb-segment" }
tracedb-server = { path = "../tracedb-server" }

[dev-dependencies]
tempfile.workspace = true
