[package]
name = "tracedb-core"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
base64.workspace = true
chacha20poly1305.workspace = true
crc32fast.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
