[package]
name = "tracedb-gateway"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
axum.workspace = true
bcrypt.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower.workspace = true
tracing.workspace = true
tracedb-catalog = { path = "../tracedb-catalog" }
tracedb-metering = { path = "../tracedb-metering" }
