[package]
name = "tracedb-index"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
bincode.workspace = true
serde_json.workspace = true
serde.workspace = true
tracedb-core = { path = "../tracedb-core" }
tracedb-text = { path = "../tracedb-text" }
tracedb-vector = { path = "../tracedb-vector" }

[dev-dependencies]
tempfile.workspace = true
