[package]
name = "tracedb-log"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
crc32fast.workspace = true
fs2.workspace = true
serde.workspace = true
serde_json.workspace = true
tracedb-core = { path = "../tracedb-core" }
tracedb-jobs = { path = "../tracedb-jobs" }

[dev-dependencies]
tempfile.workspace = true
