[package]
name = "tracedb-query"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
base64.workspace = true
fs2.workspace = true
hmac.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tracing.workspace = true
tracedb-core = { path = "../tracedb-core" }
tracedb-log = { path = "../tracedb-log" }
tracedb-modules = { path = "../tracedb-modules" }
tracedb-planner = { path = "../tracedb-planner" }
tracedb-segment = { path = "../tracedb-segment" }
tracedb-index = { path = "../tracedb-index" }
tracedb-store = { path = "../tracedb-store" }
tracedb-text = { path = "../tracedb-text" }
tracedb-vector = { path = "../tracedb-vector" }
tracedb-graph = { path = "../tracedb-graph" }
tracedb-temporal = { path = "../tracedb-temporal" }
tracedb-policy = { path = "../tracedb-policy" }
tracedb-provenance = { path = "../tracedb-provenance" }
tracedb-features = { path = "../tracedb-features" }
tracedb-retrieval-core = { path = "../tracedb-retrieval-core" }
tracedb-jobs = { path = "../tracedb-jobs" }

[dev-dependencies]
tempfile.workspace = true
