[package]
name = "tracedb-worker"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
axum.workspace = true
reqwest.workspace = true
serde_json.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracedb-jobs = { path = "../tracedb-jobs" }

[[bin]]
name = "tracedb-worker"
path = "src/main.rs"
